--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,11 @@
     "cpus": 4
   },
   "waitFor": "onCreateCommand",
-  "updateContentCommand": "cd ./server && pip install -r requirements.txt",
+  "updateContentCommand": "pip install -r requirements.txt",
   "postCreateCommand": "",
   "postAttachCommand": {
     // "server": "cd ./server && flask --debug run"
-    "test-watch": "ptw"
+    "test-watch": "ptw -- -s"
   },
   "portsAttributes": {
     "5000": {
@@ -19,7 +19,7 @@
   "customizations": {
     "codespaces": {
       "openFiles": [
-        "server/templates/index.html",
+        // "server/templates/index.html",
         "cli/main.py"
       ]
     },
